<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <LinearLayout
        android:layout_width="242dp"
        android:layout_height="325dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvGyroRes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_res" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvGyroRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_range" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvGyroX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_x" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvGyroY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_y" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/tvGyroZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gyro_z" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>